Editing LICENSE file.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: global_bottom_navigation_bar
+name: Global Bottom Navigation Bar
 description: Did you try to make Global Bottom Navigation bar to your app and you failed many times
   Did you spend a lot of hours to do this fancy thing but you never succed.
   Ok, do not worry, we are here to help and we brought a new library for you simple to use
